[package]
name = "genmc-sys"
version = "0.11.0" # NOTE: should match the GenMC version
edition = "2024"

[features]
default = ["download_genmc"]
# If downloading is disabled, a local GenMC repo must be available in the "./genmc" path.
download_genmc = ["dep:git2"]

[dependencies]
cxx = { version = "1.0.160", features = ["c++20"] }

[build-dependencies]
cmake = "0.1.54"
git2 = { version = "0.20.2", optional = true }
cxx-build = { version = "1.0.160", features = ["parallel"] }
